# ikwf-2025-2026-results

./: CLUB-ROSTERS.md  README.md  TOURNAMENT-RANKINGS.md  WEIGHT-CLASSES.md  bracket_util.py  club_util.py  custom.json  extract_weigh_ins.py  projection.py  pyproject.toml  regional-mapped-for-extract.json  retrospective.json  trackwrestling.py  usabracketing.py
_bin/: parse_rosters.py
_parsed-data/: 2025-state-qualifiers.json  2026-finalized.json  2026-rostered-state-qualifiers.json  2026-state-preview.json  central-chicago.xlsx  central.xlsx  custom-normalized-athlete-names.json  custom-normalized-team-names.json  north-chicago.xlsx  north.xlsx  regional-weight-classes.xlsx  regionals.json  rosters.json  sectional-qualifiers.csv  south-chicago.xlsx  south.xlsx  state-qualifiers.csv  west-chicago.xlsx  west.xlsx
_raw-data/: 2025-state-placers.html
_raw-data/2025-03-08/: 2025-ikwf-state-championships.json
_raw-data/2025-12-06/: 2025-ewc-beginners-and-girls-tournament.json  tots-bash.json  wo-2025-ewc-beginners-and-girls-tournament.json  wo-tots-bash.json
_raw-data/2025-12-07/: 2025-force-challenge-19.json  2025-mick-ruettiger-invitational.json  2025-oak-forest-green-and-white-tournament.json  2025-xtreme-challenge.json  42nd-annual-bulls-wrestling-tournament.json  capture-the-eagle.json  elias-george-memorial-2025.json  fox-lake-beginners-tournament.json  lawrence-county-knights-terry-hoke-open.json  lil-coalers-clash.json  lincoln-railer-rumble-2025.json  peoria-razorback-season-opener.json  tiger-takedown.json  wo-2025-force-challenge-19.json  (+11 more)
(+689 files in other folders)
